fix CI error